# virtio-bridge

./: .gitignore  LICENSE  README.md  bridge.toml.example  pyproject.toml
examples/: exec-policy.json
tests/: test_e2e.py  test_exec_policy.py  test_integration.py  test_protocol.py  test_server.py
virtio_bridge/: __init__.py  cli.py  client.py  config.py  crypto.py  direct.py  exec_policy.py  protocol.py  security.py  server.py  socks.py  tcp_protocol.py  tcp_relay.py  watcher.py
