[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtio-bridge"
version = "0.2.0"
description = "HTTP and TCP relay over shared filesystem for VMs with restricted networking"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sonosuke", email = "sounosuke@gmail.com"},
]
keywords = ["virtualization", "virtio", "filesystem", "ipc", "proxy", "vm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
watch = ["watchdog>=3.0"]

[project.scripts]
virtio-bridge = "virtio_bridge.cli:main"

[project.urls]
Homepage = "https://github.com/sounosuke/virtio-bridge"
Issues = "https://github.com/sounosuke/virtio-bridge/issues"
